--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/manhdkgch18056/ATNProject.git"
+  },
+
   "dependencies": {
     "consolidate": "^0.15.1",
     "cookie-parser": "~1.4.4",
