--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "multer": "^1.4.2",
     "serve-favicon": "^2.5.0"
   },
-  "main": "index.js",
+  "main": "products.js",
   "author": "",
   "license": "ISC",
   "description": ""
