--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -36,8 +36,8 @@
   "main": "products.js",
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "dotenv": "^8.2.0"
-  }
+  },
+  "description": ""
 }
